Changes for 2.5.0

New features:
........S. [ZBXNEXT-2462] improved nodata() function calculation (wiper)
A.F....PS. [ZBX-5813] added support for spaces in IP ranges in network discovery and action conditions (asaveljevs)
.......PS. [ZBXNEXT-866] added IP address in the messages about connections between server and proxy (igors)
A......... [ZBXNEXT-2724] removed all deprecated "exists" and "getObjects" API methods, "expandData" parameter in various *.get methods and "selectHosts" parameter from application.get method (Ivo)
..F....... [ZBXNEXT-2357] added MVC framework, some pages already take advantage of the framework (Alexei, Sasha)
...GI..PS. [ZBXNEXT-444] improved log file monitoring by saving log file meta information which was previously lost during agent restart (dimir)
..F.....S. [ZBXNEXT-1128] added support of {HOST.*} and user macros in trigger URL (igors, Sasha)
.......PS. [ZBXNEXT-2619] added an item for VMware virtual machine CPU ready state monitoring (wiper)
..F....... [ZBXNEXT-1493] changed activity dropdowns at the bottom of various pages to buttons (Oleg)
....I..PS. [ZBXNEXT-1554] added multiple OID support to SNMP low-level discovery rules (wiper)
A.F....PS. [ZBXNEXT-2321] added support for "db.odbc.discovery[]" item for low-level discovery through ODBC (asaveljevs, Juris)
....I..... [ZBXNEXT-2637] changed the DB user in the default configuration files to "zabbix", server and proxy timeouts to 4 seconds, LogSlowQueries to 3 seconds and MaxHousekeeperDelete to 5000; listed characters, prohibited in user parameters (Richlv)
A.F....PS. [ZBXNEXT-756] added function percentile() to calculated items and trigger expressions (asaveljevs)
.....J.... [ZBX-9006] added support for IPv6 addresses to Java gateway (asaveljevs)
A.F....... [ZBXNEXT-1821] added "Zabbix" as default user agent, updated outdated user agent strings in web scenario form and improved selection of other user agents (Ivo)