@@ -331,6 +331,7 @@ ROW   |8         |SNMP interface status (ifOperStatus) |
 ROW   |1         |Service state                        |
 ROW   |12        |VMware VirtualMachinePowerState      |
 ROW   |13        |VMware status                        |
+ROW   |15        |Value cache operating mode           |
 ROW   |3         |Windows service state                |
 ROW   |10        |Zabbix agent ping status             |
 
@@ -867,6 +868,7 @@ ROW   |23657 |3   |                 |                                           
 ROW   |23658 |3   |                 |                                                           |10088 |Full name                                                        |vmware.fullname[{$URL}]                                                        |3600 |90     |365   |0     |1         |             |        |0         |0    |                   |0                   |                     |                     |1      |          |NULL      |NULL      |          |                                                                                    |                |0        |0       |{$USERNAME}|{$PASSWORD}|         |          |0    |NULL       |    |                                                                                                                                                                                                                                                                                                                                                                                                                                          |0             |30      |0                  |0                  |                  |0       |
 ROW   |23659 |3   |                 |                                                           |10088 |Version                                                          |vmware.version[{$URL}]                                                         |3600 |90     |365   |0     |1         |             |        |0         |0    |                   |0                   |                     |                     |1      |          |NULL      |NULL      |          |                                                                                    |                |0        |0       |{$USERNAME}|{$PASSWORD}|         |          |0    |NULL       |    |                                                                                                                                                                                                                                                                                                                                                                                                                                          |0             |30      |0                  |0                  |                  |0       |
 ROW   |23660 |3   |                 |                                                           |10089 |CPU ready                                                        |vmware.vm.cpu.ready[{$URL},{HOST.HOST}]                                        |60   |90     |365   |0     |3         |             |%       |0         |0    |                   |0                   |                     |                     |1      |          |NULL      |NULL      |          |                                                                                    |                |0        |0       |{$USERNAME}|{$PASSWORD}|         |          |0    |NULL       |    |Percentage of time that the virtual machine was ready, but could not get scheduled to run on the physical CPU. CPU ready time is dependent on the number of virtual machines on the host and their CPU loads.                                                                                                                                                                                                                             |0             |30      |0                  |0                  |                  |0       |
+ROW   |23661 |5   |                 |                                                           |10047 |Zabbix value cache operating mode                                |zabbix[vcache,cache,mode]                                                      |60   |7      |365   |0     |3         |             |        |0         |0    |                   |0                   |                     |                     |1      |          |NULL      |15        |          |                                                                                    |                |0        |0       |           |           |         |          |0    |NULL       |    |                                                                                                                                                                                                                                                                                                                                                                                                                                          |0             |30      |0                  |0                  |                  |0       |
 ROW   |10020 |0   |                 |                                                           |10001 |Agent ping                                                       |agent.ping                                                                     |60   |7      |365   |0     |3         |             |        |0         |0    |                   |0                   |                     |                     |1      |          |22232     |10        |          |                                                                                    |                |0        |0       |           |           |         |          |0    |NULL       |    |The agent always returns 1 for this item. It could be used in combination with nodata() for availability check.                                                                                                                                                                                                                                                                                                                           |0             |0       |0                  |0                  |                  |0       |
 ROW   |10059 |0   |                 |                                                           |10001 |Version of zabbix_agent(d) running                               |agent.version                                                                  |3600 |7      |365   |0     |1         |             |        |0         |0    |                   |0                   |                     |                     |1      |          |22231     |NULL      |          |                                                                                    |                |0        |0       |           |           |         |          |0    |NULL       |    |                                                                                                                                                                                                                                                                                                                                                                                                                                          |0             |0       |0                  |0                  |                  |0       |
 ROW   |22715 |4   |{$SNMP_COMMUNITY}|SNMPv2-MIB::sysContact.0                                   |10066 |Device contact details                                           |sysContact                                                                     |3600 |7      |365   |0     |1         |             |        |0         |0    |                   |0                   |                     |                     |1      |          |22713     |NULL      |          |                                                                                    |                |0        |0       |           |           |         |          |0    |NULL       |    |The textual identification of the contact person for this managed node, together with information on how to contact this person.  If no contact information is known, the value is the zero-length string.                                                                                                                                                                                                                                |23            |0       |0                  |0                  |                  |0       |
@@ -1025,6 +1027,7 @@ ROW   |23620 |5   |                 |                                           
 ROW   |23625 |5   |                 |                                                           |10084 |Zabbix value cache hits                                          |zabbix[vcache,cache,hits]                                                      |60   |7      |365   |0     |0         |             |vps     |0         |1    |                   |0                   |                     |                     |1      |          |22196     |NULL      |          |                                                                                    |                |0        |0       |           |           |         |          |0    |NULL       |    |                                                                                                                                                                                                                                                                                                                                                                                                                                          |0             |0       |0                  |0                  |                  |0       |
 ROW   |23628 |5   |                 |                                                           |10084 |Zabbix value cache misses                                        |zabbix[vcache,cache,misses]                                                    |60   |7      |365   |0     |0         |             |vps     |0         |1    |                   |0                   |                     |                     |1      |          |22199     |NULL      |          |                                                                                    |                |0        |0       |           |           |         |          |0    |NULL       |    |                                                                                                                                                                                                                                                                                                                                                                                                                                          |0             |0       |0                  |0                  |                  |0       |
 ROW   |23635 |5   |                 |                                                           |10084 |Zabbix vmware cache, % free                                      |zabbix[vmware,buffer,pfree]                                                    |60   |7      |365   |0     |0         |             |%       |0         |0    |                   |0                   |                     |                     |1      |          |23634     |NULL      |          |                                                                                    |                |0        |0       |           |           |         |          |0    |NULL       |    |                                                                                                                                                                                                                                                                                                                                                                                                                                          |0             |30      |0                  |0                  |                  |0       |
+ROW   |23662 |5   |                 |                                                           |10084 |Zabbix value cache operating mode                                |zabbix[vcache,cache,mode]                                                      |60   |7      |365   |0     |3         |             |        |0         |0    |                   |0                   |                     |                     |1      |          |23661     |15        |          |                                                                                    |                |0        |0       |           |           |         |          |0    |NULL       |    |                                                                                                                                                                                                                                                                                                                                                                                                                                          |0             |30      |0                  |0                  |                  |0       |
 
 TABLE |media_type
 FIELDS|mediatypeid|type|description|smtp_server     |smtp_helo  |smtp_email        |exec_path|gsm_modem |username          |passwd|status|
@@ -1328,6 +1331,7 @@ ROW   |13553    |{13158}=0                                                      
 ROW   |13554    |{13096}=0                                                               |{HOST.NAME} is unavailable by ICMP                                  |   |0     |3       |                                                                                                                                      |NULL      |0   |0    |
 ROW   |13555    |{13097}>0.15                                                            |Response time is too high on {HOST.NAME}                            |   |0     |2       |                                                                                                                                      |NULL      |0   |0    |
 ROW   |13556    |{13098}>20                                                              |Ping loss is too high on {HOST.NAME}                                |   |0     |2       |                                                                                                                                      |NULL      |0   |0    |
+ROW   |13557    |{13160}=1                                                               |Zabbix value cache working in low memory mode                       |   |0     |4       |                                                                                                                                      |NULL      |0   |0    |
 ROW   |10045    |{12927}>0                                                               |Version of zabbix_agent(d) was changed on {HOST.NAME}               |   |0     |1       |                                                                                                                                      |13026     |0   |0    |
 ROW   |10047    |{12550}=1                                                               |Zabbix agent on {HOST.NAME} is unreachable for 5 minutes            |   |0     |3       |                                                                                                                                      |13025     |0   |0    |
 ROW   |13075    |{12648}<5                                                               |Less than 5% free in the value cache                                |   |0     |3       |                                                                                                                                      |13074     |0   |0    |
@@ -1400,6 +1404,7 @@ ROW   |13514    |{12943}>0                                                      
 ROW   |13515    |{12944}>0                                                               |Host name of zabbix_agentd was changed on {HOST.NAME}               |   |0     |1       |                                                                                                                                      |13507     |0   |0    |
 ROW   |13516    |{12945}>0                                                               |Host name of zabbix_agentd was changed on {HOST.NAME}               |   |0     |1       |                                                                                                                                      |13507     |0   |0    |
 ROW   |13537    |{12966}<25                                                              |Less than 25% free in the vmware cache                              |   |0     |3       |                                                                                                                                      |13536     |0   |0    |
+ROW   |13558    |{13161}=1                                                               |Zabbix value cache working in low memory mode                       |   |0     |4       |                                                                                                                                      |13557     |0   |0    |
 
 TABLE |trigger_depends
 FIELDS|triggerdepid|triggerid_down|triggerid_up|
@@ -1763,6 +1768,8 @@ ROW   |13156     |23650 |13550    |max     |#3       |
 ROW   |13157     |23652 |13552    |max     |#3       |
 ROW   |13158     |23653 |13553    |max     |#3       |
 ROW   |13159     |23654 |13285    |max     |#3       |
+ROW   |13160     |23661 |13557    |last    |         |
+ROW   |13161     |23662 |13558    |last    |         |
 
 TABLE |graphs
 FIELDS|graphid|name                                    |width|height|yaxismin|yaxismax|templateid|show_work_period|show_triggers|graphtype|show_legend|show_3d|percent_left|percent_right|ymin_type|ymax_type|ymin_itemid|ymax_itemid|flags|
@@ -2330,6 +2337,7 @@ ROW   |4707     |179          |22689 |
 ROW   |5341     |179          |23171 |
 ROW   |5421     |179          |23251 |
 ROW   |5849     |179          |23634 |
+ROW   |5883     |179          |23661 |
 ROW   |4548     |206          |22231 |
 ROW   |4544     |206          |22232 |
 ROW   |5514     |206          |23318 |
@@ -2571,7 +2579,6 @@ ROW   |5332     |273          |23119 |
 ROW   |5334     |273          |23120 |
 ROW   |5336     |273          |23121 |
 ROW   |5877     |273          |23123 |
-ROW   |5878     |279          |23123 |
 ROW   |5248     |274          |22948 |
 ROW   |5250     |274          |22949 |
 ROW   |5251     |274          |22950 |
@@ -2586,7 +2593,6 @@ ROW   |4994     |275          |22939 |
 ROW   |4998     |276          |22942 |
 ROW   |4999     |276          |22943 |
 ROW   |5879     |276          |23122 |
-ROW   |5880     |279          |23122 |
 ROW   |5193     |276          |23124 |
 ROW   |5194     |276          |23125 |
 ROW   |5319     |276          |23126 |
@@ -2620,6 +2626,8 @@ ROW   |5327     |279          |23117 |
 ROW   |5333     |279          |23119 |
 ROW   |5335     |279          |23120 |
 ROW   |5337     |279          |23121 |
+ROW   |5880     |279          |23122 |
+ROW   |5878     |279          |23123 |
 ROW   |4954     |280          |22917 |
 ROW   |4955     |280          |22918 |
 ROW   |4996     |281          |22940 |
@@ -2895,6 +2903,7 @@ ROW   |5527     |345          |23620 |
 ROW   |5528     |345          |23625 |
 ROW   |5529     |345          |23628 |
 ROW   |5850     |345          |23635 |
+ROW   |5884     |345          |23662 |
 ROW   |5468     |346          |23294 |
 ROW   |5470     |346          |23295 |
 ROW   |5472     |346          |23296 |
@@ -3109,6 +3118,8 @@ ROW   |78       |13        |3    |red               |
 ROW   |79       |14        |0    |normal            |
 ROW   |80       |14        |1    |in maintenance    |
 ROW   |81       |14        |2    |no data collection|
+ROW   |82       |15        |0    |Normal            |
+ROW   |83       |15        |1    |Low memory        |
 
 TABLE |sysmaps
 FIELDS|sysmapid|name         |width|height|backgroundid|label_type|label_location|highlight|expandproblem|markelements|show_unack|grid_size|grid_show|grid_align|label_format|label_type_host|label_type_hostgroup|label_type_trigger|label_type_map|label_type_image|label_string_host|label_string_hostgroup|label_string_trigger|label_string_map|label_string_image|iconmapid|expand_macros|severity_min|
