@@ -1,6 +1,7 @@
 Changes for 2.5.0
 
 New features:
+........S. [ZBXNEXT-2474] improved value cache low memory mode handling by switching back to normal mode once per day. The current value cache operational mode now can be checked with zabbix[vcache,cache,mode] interval item (wiper)
 ........S. [ZBXNEXT-2462] improved nodata() function calculation (wiper)
 A.F....PS. [ZBX-5813] added support for spaces in IP ranges in network discovery and action conditions (asaveljevs)
 .......PS. [ZBXNEXT-866] added IP address in the messages about connections between server and proxy (igors)
